resources/public/style.css
/* The general principle for borders is that the container sets a class
   on a contained div saying what kind of borders it needs. */

* {
    border-style: solid;
    border-width: 0px;
    border-color: hsl(0, 0%, 80%);
    box-sizing: border-box;
    background-color: transparent;
}

.indent-1 {
    margin-left: 15px;
    height:  100%;
}

.indent-2 {
    margin-left: 30px;
    height:  100%;
}

.indent-3 {
    margin-left: 45px;
    height:  100%;
}

/* Repeat selector to give this rule highest specificity */
.selected.selected.selected.selected.selected.selected {
    background-image:
    linear-gradient(to right,
                    hsla(220, 100%, 55%, 1),
                    hsla(0, 0%, 100%, 0) 5px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to left,
                    hsla(220, 100%, 55%, 1),
                    hsla(0, 0%, 100%, 0) 5px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to bottom,
                    hsla(220, 100%, 55%, 1),
                    hsla(0, 0%, 100%, 0) 5px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to top,
                    hsla(220, 100%, 55%, 1),
                    hsla(0, 0%, 100%, 0) 5px,
                    hsla(0, 0%, 100%, 0));
}

.tags.column.selected {
    background-color: hsl(194, 100%, 88%);
}

.column:not(.tags), .full-row {
    padding: 3px;
}

.top-border {
    border-top-width: 2px;
}

.bottom-border {
    border-bottom-width: 2px;
}

.ll-corner {
    border-bottom-left-radius: 7px;
}

.full-row {
    box-sizing: content-box;
    height:100%;
    text-align: right;
}

/* Illumination of borders for top level tags */
.tags.column {
    vertical-align: top;
    background-image:
    linear-gradient(to right,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
    background-color: hsl(194, 100%, 88%);
    border-left-width: 2px;
    width: 30%;
}

.tags.column.top-border {
    background-image:
    linear-gradient(to right,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to bottom,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
    border-top-left-radius: 7px;
}

.tags.column.bottom-border, .tags.column.ll-corner {
    background-image:
    linear-gradient(to right,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to top,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
    border-bottom-left-radius: 7px;
}

.tags.column.top-border.bottom-border, .tags.column.top-border.ll-corner {
    background-image:
    linear-gradient(to right,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to bottom,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to top,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
    border-top-left-radius: 7px;
    border-bottom-left-radius: 7px;
}

/* Illumination of borders for indented tags */
.tags.column > .full-row {
    background-image:
    linear-gradient(to bottom,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0)),
    linear-gradient(to top,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
}

.tags.column > .full-row.with-children,
.tags.column.bottom-row > .full-row,
.tags.column.ll-corner > .full-row {
    background-image:
    linear-gradient(to bottom,
                    hsla(0, 0%, 100%, .7),
                    hsla(0, 0%, 100%, 0) 7px,
                    hsla(0, 0%, 100%, 0));
}

.spacer {
    display:inline-block;
    vertical-align: middle;
    height: 100%;
}

.for-multiple, .tags.column.for-multiple, .for-multiple > .stack {
    vertical-align: middle;
}

.stack {
    vertical-align: top;
    display: inline-block;
    text-align: left;
}

.with-children, .full-row.with-children, .full-row.with-elements {
    text-align: left;
}

.no-tags > .tags.column {
    width: 10px;
}

.column {
    height: 15px; /* Make no-content cells have minimum height */
}

.column:not(.tags) {
    border-width: 2px 2px 0px 2px;
    width: auto;
    background-color: white;
}

.last-row > .column:not(.tags) {
    border-bottom-width: 2px;
}

/* grayish indicators of places where there is no current content */
.editable:not(.content-text) {
    background-color: hsl(0, 0%, 88%);
}

.editable.tags.column:not(.content-text) {
    background-color: hsl(194, 50%, 88%);
}

.content-text {
    min-height: 20px;
}

.element-table {
    border-spacing: 0;
    margin-left: 3px;
}

.item.with-elements {
    /* Make room for the element-table, which will be offset 3 px,
       but 100% size */
    padding-right: 3px;
}

.item.with-elements.column:not(.tags),
.item.with-elements.full-row {
    /* Same as above, but must also include the padding for a column */
    padding-right: 6px;
}

.vertical-separated {
    border-width: 2px 0px 0px 0px;
}

.vertical-separated:first-child {
    border-width: 0px;
}

.item.with-elements.vertical-separated { 
    padding-bottom: 3px;
}

.item.with-elements.vertical-separated:last-child { 
    padding-bottom: 0px;
}

.editable {
    position: relative; /* To make edit_holder position relative to it */
}

#edit_holder {
    width: 100%;
    height: 100%;
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
}

.editable > #edit_holder {
    display: block;
}

#edit_input {
    min-width: 100%;
    min-height: 100%;
    height: auto;
    background-color: cornsilk;
    resize: none;
    overflow-y: visible;
    left: 0;
    right: 0;
    position: absolute;
    z-index: 1;
}

